# foundation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wscript  wscriptBACKUP
Container/: ContainerTypes.h  SimpleArray.h  SimpleFixedArray.h  SimpleFixedMap.h  SimpleFixedQueue.h  SimpleLockFreeQueue.h  SimpleLocklessQueue.h  SimpleMap.h
FileSystem/: FileSystem.cpp  FileSystem.h
Include/Container/: ContainerTypes.h  SimpleFixedArray.h  SimpleFixedQueue.h  SimpleLockFreeQueue.h
Include/FileSystem/: FileSystem.h
Include/IO/: FileIOInterface.h  FileWatcherInterface.h
Include/Memory/: Allocator.h  AllocatorBase.h  BaseAllocator.h  BaseSchema.h  BootstrapAllocator.h  ClassAllocator.h  EaStdAllocator.h  EaStlAllocator.h  EastlAllocatorWrapper.h  Memory.h  MemoryManager.h  MemoryManagerInterface.h  PoolSchema.h  SchemaBase.h  StaticAllocatorWrapper.h  StaticEaStlAllocator.h  StaticEastlAllocatorWrapper.h  StdAllocator.h  TlsfAllocator.h  TlsfSchema.h
Include/Parallel/: LockScopeGuard.h  SpinAndSleepLock.h  SpinLock.h
Include/Std/: shared_ptr_bootstrap.h  string_bootstrap.h  unordered_map_bootstrap.h  vector_bootstrap.h
Include/Util/: Assert.h  Atomic.h  HashName.h  Logger.h  Macro.h  ManagerInterface.h  MurmurHash3.h  Util.h
Include/_Platform/Common/IO/: FileIOCommon.h
Include/_Platform/Win/: PlatformFile.cmake
Include/_Platform/Win/IO/: FileIO.h  FileWatcher.h
Include/_Platform/win/Parallel/: SpinAndSleepLock.h
Include/_Platform/win/Util/: Mutex.h
Memory/: Allocator.cpp  Allocator.h
Source/: Foundation.cpp
Source/Container/: ContainerTypes.cpp
Source/Memory/: BaseAllocator.cpp  BaseSchema.cpp  BootstrapAllocator.cpp  EastlAllocator.cpp  MemoryManager.cpp  PoolSchema.cpp  StaticEaStlAllocator.cpp  TlsfSchema.cpp
Source/Parallel/: SpinLock.cpp
Source/Util/: Atomic.cpp  HashName.cpp  Logger.cpp  MurmurHash3.cpp
Source/_Platform/Common/IO/: FileIOCommon.cpp
Source/_Platform/Common/Parallel/: SpinAndSleepLock.cpp
Source/_Platform/Win/: PlatformFile.cmake
Source/_Platform/Win/IO/: FileIO.cpp  FileWatcher.cpp
Source/_Platform/win/: PlatformFile.cmake  PlatformFiles.cmake
Source/_Platform/win/Parallel/: SpinAndSleepLock.cpp
Util/: Assert.cpp  Atomic.cpp  HashName.cpp  HashName.h  Logger.cpp  Logger.h  MurmurHash3.cpp  MurmurHash3.h  Util.h  WinApi.cpp  WinApi.h
